# DataNexus

./: Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  __init__.py  alembic.ini  config.ini  config.local.ini  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  server.py
backend/app/api/v1/: client.py  dataset.py  datasource.py  mapping.py  user.py
backend/app/database/: __init__.py  db.py
backend/app/database/base/: __init__.py  model.py  service.py
backend/app/database/client/: model.py  service.py
backend/app/database/dataset/: model.py  service.py
backend/app/database/datasource/: model.py  service.py
backend/app/database/mapping/: model.py  service.py
backend/app/database/user/: model.py  service.py
backend/app/enums/: datasourcetype.py
backend/app/schemas/: client.py  dataset.py  datasource.py  mapping.py  users.py
backend/app/services/: client.py  user.py
backend/app/utils/: aws_client.py  logging.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_12_23_1720-0ee57491068a_new_migration.py
